--- a/vercel.json
+++ b/vercel.json
@@ -26,7 +26,7 @@
       ]
     },
     {
-      "source": "/(.*\\.(css|js|mp3|wav))",
+      "source": "/(.*\\.(css|js|mp3|wav))$",
       "headers": [
         {
           "key": "Cache-Control",
